--- a/app/templates/inbox/chats.html
+++ b/app/templates/inbox/chats.html
@@ -2,7 +2,15 @@
 
 {% block content %}
 	<div class="container pt-3">
-		<h1 class="mb-3">Inbox</h1>
+		<h1 class="mb-3">Inbox : {{threads.count()}}</h1>
+        <label for="sort-select">Sort by:</label>
+        <button class="button-link">
+            <a href="{{ url('job_post_threads', job_post_id) }}?q=default">Default</a>
+        </button>
+        <button class="button-link">
+            <a href="{{ url('job_post_threads', job_post_id) }}?q=best_match">Best Match</a>
+        </button>
+
 
 		{% for thread in threads %}
 			{% set last_message = thread.last_message %}
@@ -13,11 +21,14 @@
 					<div class="row">
 						<div class="col-sm-3">
 							<div class="row">
-								<div class="col-auto">
+								<div class="col-auto" style="text-align: center;">
 								{% if thread.is_anonymous or not thread.candidate.picture_url %}
-										<img class="rounded-circle" width="30px" height="30px" style="object-fit: cover" src="https://p.djinni.co/static/i/default-userpic@2x.png" alt="">
+										<img class="rounded-circle" width="50px" height="50px" style="object-fit: cover" src="https://p.djinni.co/static/i/default-userpic@2x.png" alt="">
+                                        {% if show_score %}<h6>Score: {{thread.score|floatformat}}/10</h6>{% endif %}
+
 								{% else %}
 										<img class="rounded-circle" width="30px" height="30px" style="object-fit: cover" src="{{ thread.candidate.picture_url }}" alt="">
+                                        {% if show_score %}<h6>Score: {{thread.score|floatformat}}/10</h6>{% endif %}
 								{% endif %}
 								</div>
 								<div class="col">
