--- a/app/templates/inbox/mixin/advanced-scoring-tool.jinja
+++ b/app/templates/inbox/mixin/advanced-scoring-tool.jinja
@@ -1,67 +1,82 @@
 <form method="get" action="#">
 
-    <h4>Advanced Scoring Tool</h4>
-    <p class="text-secondary">This feature allows you to see more relevant Candidates easier. Just choose how to treat different aspects of their profiles or how the profiles match the Job description by specifying weights for each parameter. The more points Candidate gets the higher they will float atop</p>
+    <h4>Advanced Sorting Tool</h4>
+    <p class="text-secondary">This feature allows you to see more relevant Candidates easier. Just choose how to treat different aspects of their profiles or how the profiles match the Job description by specifying weights for each parameter.</p>
 
-    
+    <!-- AST- prefix stands for Advanced Sorting Tool -->
+    <table class="table table-hover table-striped"
+        style="width: 100%; vertical-align: middle">
 
-    <!-- <table class="table table-hover table-striped" style="width: 100%">
-    <colgroup>
-    <col span="1" style="width: min-content">
-    <col span="1" style="width: 1em">
-    <col span="1" style="width: max-content">
-    <col span="1" style="width: 1em">
-    </colgroup>
+        <colgroup>
+            <col span="1" style="width: 20em">
+            <col span="1" style="width: max-content">
+        </colgroup>
 
-    <thead><tr>
-    <th>Weight</th>
-    <th></th>
-    <th>Param</th>
-    <th></th>
-    </tr></thead>
+        <thead><tr>
+            <th>Component Name</th>
+            <th>Component Weight</th>
+        </tr></thead>
 
-    <tbody>
-    <tr>
-    <td>
-    <input name="adv-tool-weight" type="number" value="1">
-    </td>
+        <tbody>
+            <tr>
+                <td>
+                    <label for="ast-salary">Salary importance</label>
+                    <div class="text-secondary">
+                        (Higher value means: The lower salary the better)
+                    </div>
+                </td>
 
-    <td>
-    X
-    </td>
+                <td>
+                    <input name="ast-salary" type="range" min="0" max="100"
+                        value="{{ ast_salary or 25 }}"
+                        style="width: 100%">
+                </td>
+            </tr>
 
-    <td>
-    <select name="adv-tool-param"
-    class="form-select form-select-sm"
-    style="width: max-content">
+            <tr>
+                <td>
+                    <label for="ast-experience">Experience importance</label>
+                    <div class="text-secondary">
+                        (Higher value means: The more experience the better)
+                    </div>
+                </td>
 
-    <option value="salary">Salary</option>
-    <option value="experience">Years of Experience</option>
-    </select>
-    </td>
+                <td>
+                    <input name="ast-experience" type="range" min="0" max="100"
+                        value="{{ ast_experience or 50 }}"
+                        style="width: 100%">
+                </td>
+            </tr>
 
-    <td>
-    <button type="button" class="btn btn-sm btn-outline-danger"
-    style="float: right"
-    title="Delete the Scoring component">
-    X
-    </button>
-    </td>
-    </tr>
+            <tr>
+                <td>
+                    <label for="ast-skills">Skills importance</label>
+                    <div class="text-secondary">
+                        (Higher value means: The more matching skills in
+                        Candidate's profile with the Job the better)
+                    </div>
+                </td>
 
-    <tr><td colspan="100%">
-    <button class="btn btn-sm btn-outline-success" style="width: 100%">
-    Add More
-    </button>
-    </td></tr>
-    </tbody>
-    </table> -->
+                <td>
+                    <input name="ast-skills" type="range" min="0" max="100"
+                        value="{{ ast_skills or 50 }}"
+                        style="width: 100%">
+                </td>
+            </tr>
 
-    <div class style="width: 100%">
-        <label for="auto-apply-checkbox">Auto-Apply</label>
-        <input name="auto-apply-checkbox" type="checkbox"
-            class="btn btn-sm btn-primary" checked>
+            <tr>
+                <td colspan="100%">
+                    <div class style="float: right">
+                        <input name="auto-apply-checkbox" type="checkbox"
+                            class="btn btn-sm btn-primary" checked>
+                        <label for="auto-apply-checkbox">Auto-Apply</label>
 
-        <button type="submit" class="btn btn-sm btn-primary">Apply</button>
-    </div>
+                        <button type="submit" class="btn btn-sm btn-primary">
+                            Apply
+                        </button>
+                    </div>
+                </td>
+            </tr>
+        </tbody>
+    </table>
 </form>
