MVP Algorithm v.1 implementation
Candidate's salary and experience are considered while skills evaluation
is NIY

--- a/app/templates/inbox/mixin/chat-list.jinja
+++ b/app/templates/inbox/mixin/chat-list.jinja
@@ -5,7 +5,10 @@
 	{% include 'inbox/mixin/single-chat.jinja' %}
 {% endfor %}
 
-<div id="load-more-pin" hx-get="{{ next_page_url }}"
-    hx-trigger="revealed"
-    hx-swap="outerHTML"
-    hx-indicator="#spinner">
+<!-- FIXME: it's a simplified approach -->
+{% if threads|length %}
+    <div id="load-more-pin" hx-get="{{ next_page_url }}"
+        hx-trigger="revealed"
+        hx-swap="outerHTML"
+        hx-indicator="#spinner">
+{% endif %}
