--- a/app/templates/inbox/chats.html
+++ b/app/templates/inbox/chats.html
@@ -4,67 +4,83 @@
 	<div class="container pt-3">
 		<h1 class="mb-3">Inbox</h1>
 
-        <table class="mb-3 table">
-            <colgroup>
-                <col span="1" style="min-width: 15em">
-                <col span="1" style="width: 100%">
-                <col span="1" style="width: min-content">
-            </colgroup>
+        <form method="get" action="">
+            <table class="mb-3 table">
+                <colgroup>
+                    <col span="1" style="min-width: 15em">
+                    <col span="1" style="width: 100%">
+                    <col span="1" style="width: min-content">
+                </colgroup>
 
-            <tbody>
-                <tr>
-                    <td>
-                        <form href="#" method="get">
-                            <select name="job-filter" class="form-select form-select-sm"
-                                style="max-width: 20rem">
+                <tbody>
+                    <tr>
+                        <td>
+                            <select name="{{ const.http.param.JOB_FILTER }}"
+                                class="form-select form-select-sm"
+                                onchange="this.form.submit()"
+                                style="max-width: 20rem; display: inline">
 
-                                <option value="-1" checked>All</option>
+                                <option value="" {{ '' if current_job else 'selected' }}>
+                                    Show All Jobs
+                                </option>
 
                                 {% for j in jobs %}
-                                    <option value="{{ j.id }}">
+                                    <option value="{{ j.id }}"
+                                        {{ 'selected' if (current_job and current_job.id == j.id) else '' }}>
+
                                         {{ '#%s: %s' % (j.id, j.position) }}
                                     </option>
                                 {% endfor %}
                             </select>
-                        </form>
-                    </td>
+                        </td>
 
-                    <td>
-                        <input type="search" placeholder="Search in Messages (NIY)"
-                            style="width: 100%">
-                    </td>
+                        <td>
+                            <input type="search" placeholder="Search in Messages (NIY)"
+                                style="width: 100%">
+                        </td>
 
-                    <td>
-                        <form action="" method="get" style="display: inline">
-                            <select name="{{ const.http.param.SORTING }}"
-                                class="form-select form-select-sm"
-                                style="float: right; width: min-content">
+                        <td>
+                            <form action="" method="get" style="display: inline">
+                                <select name="{{ const.http.param.SORTING }}"
+                                    onchange="this.form.submit()"
+                                    class="form-select form-select-sm"
+                                    style="float: right; width: min-content">
 
-                                {% for so in sorting_options %}
-                                    <option value="{{ so.id }}">{{ so.text }}</option>
-                                {% endfor %}
+                                    {% for so in sorting_options %}
+                                        <option value="{{ so.id }}"
+                                            {{ 'selected' if so == current_sorting }}>
 
-                                <script>
-                                /* the last item MUST be "Advanced Sorting" and it has special meaning */
-                                el = document.currentScript.previousElementSibling;
-                                $(el).on('click', function (ev) {
-                                    ev.preventDefault();
+                                            {{ so.text }}
+                                        </option>
+                                    {% endfor %}
+
+                                    <!-- <script>
+                                    /* the last item MUST be "Advanced Sorting"
+                                    and it has special meaning */
+                                    el = document.currentScript.previousElementSibling;
+                                    $(el).on('click', function (ev) {
                                     ev.target.classList.toggle('active');
-                                    $('#adv-scoring-tool').toggle('hidden');
-                                });
-                                </script>
-                            </select>
-                        </form>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
+                                    $('#{{ const.html.id.ADVANCED_SORTING_TOOL }}').toggle('hidden');
+                                    });
+                                    </script> -->
+                                </select>
+                            </form>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
 
-        <div class="mb-3" style="display: block" id="adv-scoring-tool">
-            {% include 'inbox/mixin/advanced-scoring-tool.jinja' %}
-        </div>
+            
 
-        <div id="chat-list">
+            <div id="{{ const.html.id.ADVANCED_SORTING_TOOL }}"
+                style="display: {{ 'block' if current_sorting == const.sorting.advanced else 'none' }}"
+                class="mb-3" style="display: block">
+
+                {% include 'inbox/mixin/advanced-scoring-tool.jinja' %}
+            </div>
+        </form>
+
+        <div id="{{ const.html.id.CHAT_LIST }}">
             {% include 'inbox/mixin/chat-list.jinja' %}
         </div>
 
