--- a/app/templates/inbox/mixin/advanced-scoring-tool.jinja
+++ b/app/templates/inbox/mixin/advanced-scoring-tool.jinja
@@ -1,82 +1,92 @@
-<form method="get" action="#">
+<h4>Advanced Sorting Tool</h4>
+<p class="text-secondary">This feature allows you to see more relevant Candidates easier. Just choose how to treat different aspects of their profiles or how the profiles match the Job description by specifying weights for each parameter.</p>
 
-    <h4>Advanced Sorting Tool</h4>
-    <p class="text-secondary">This feature allows you to see more relevant Candidates easier. Just choose how to treat different aspects of their profiles or how the profiles match the Job description by specifying weights for each parameter.</p>
+<!-- AST- prefix stands for Advanced Sorting Tool -->
+<table class="table table-hover table-striped"
+    style="width: 100%; vertical-align: middle">
 
-    <!-- AST- prefix stands for Advanced Sorting Tool -->
-    <table class="table table-hover table-striped"
-        style="width: 100%; vertical-align: middle">
+    <colgroup>
+        <col span="1" style="width: 20em">
+        <col span="1" style="width: max-content">
+    </colgroup>
 
-        <colgroup>
-            <col span="1" style="width: 20em">
-            <col span="1" style="width: max-content">
-        </colgroup>
+    <thead><tr>
+        <th>Component Name</th>
+        <th>Component Weight</th>
+    </tr></thead>
 
-        <thead><tr>
-            <th>Component Name</th>
-            <th>Component Weight</th>
-        </tr></thead>
+    <tbody>
+        <tr>
+            <td>
+                <label for="{{ const.http.param.ast.SALARY }}">
+                    Salary importance
+                </label>
 
-        <tbody>
-            <tr>
-                <td>
-                    <label for="ast-salary">Salary importance</label>
-                    <div class="text-secondary">
-                        (Higher value means: The lower salary the better)
-                    </div>
-                </td>
+                <div class="text-secondary">
+                    (Higher value means: The lower salary the better)
+                </div>
+            </td>
 
-                <td>
-                    <input name="ast-salary" type="range" min="0" max="100"
-                        value="{{ ast_salary or 25 }}"
-                        style="width: 100%">
-                </td>
-            </tr>
+            <td>
+                <input name="{{ const.http.param.ast.SALARY }}"
+                    type="range" min="0" max="100"
+                    value="{{ ast_salary or 25 }}"
+                    style="width: 100%">
+            </td>
+        </tr>
 
-            <tr>
-                <td>
-                    <label for="ast-experience">Experience importance</label>
-                    <div class="text-secondary">
-                        (Higher value means: The more experience the better)
-                    </div>
-                </td>
+        <tr>
+            <td>
+                <label for="{{ const.http.param.ast.EXPERIENCE }}">
+                    Experience importance
+                </label>
 
-                <td>
-                    <input name="ast-experience" type="range" min="0" max="100"
-                        value="{{ ast_experience or 50 }}"
-                        style="width: 100%">
-                </td>
-            </tr>
+                <div class="text-secondary">
+                    (Higher value means: The more experience the better)
+                </div>
+            </td>
 
-            <tr>
-                <td>
-                    <label for="ast-skills">Skills importance</label>
-                    <div class="text-secondary">
-                        (Higher value means: The more matching skills in
-                        Candidate's profile with the Job the better)
-                    </div>
-                </td>
+            <td>
+                <input name="{{ const.http.param.ast.EXPERIENCE }}"
+                    type="range" min="0" max="100"
+                    value="{{ ast_experience or 50 }}"
+                    style="width: 100%">
+            </td>
+        </tr>
 
-                <td>
-                    <input name="ast-skills" type="range" min="0" max="100"
-                        value="{{ ast_skills or 50 }}"
-                        style="width: 100%">
-                </td>
-            </tr>
+        <tr>
+            <td>
+                <label for="{{ const.http.param.ast.SKILLS }}">
+                    Skills importance
+                </label>
 
-            <tr>
-                <td colspan="100%">
-                    <div class style="float: right">
-                        <input name="auto-apply-checkbox" type="checkbox"
-                            class="btn btn-sm btn-primary" checked>
-                        <label for="auto-apply-checkbox">Auto-Apply</label>
+                <div class="text-secondary">
+                    (Higher value means: The more matching skills in
+                    Candidate's profile with the Job the better)
+                </div>
+            </td>
 
-                        <button type="submit" class="btn btn-sm btn-primary">
-                            Apply
-                        </button>
-                    </div>
-                </td>
-            </tr>
-        </tbody>
-    </table>
-</form>
+            <td>
+                <input name="{{ const.http.param.ast.SKILLS }}"
+                    type="range" min="0" max="100"
+                    value="{{ ast_skills or 50 }}"
+                    style="width: 100%">
+            </td>
+        </tr>
+
+        <tr>
+            <td colspan="100%">
+                <!-- <div class style="float: right"> -->
+                <!-- <input id="auto-apply-checkbox" type="checkbox"
+                class="btn btn-sm btn-primary" checked>
+                <span>Auto-Apply</span> -->
+
+                <button type="submit" class="btn btn-sm btn-primary"
+                    style="width: 100%">
+                    Apply
+                </button>
+                <!-- </div> -->
+            </td>
+        </tr>
+    </tbody>
+</table>
