--- a/app/templates/inbox/thread.html
+++ b/app/templates/inbox/thread.html
@@ -3,7 +3,7 @@
 {% block content %}
 	<div class="container pt-5 pb-5">
 		<div class = "row" >
-			<strong>Distance: {{distance}} </strong>
+			<strong>similarity: {{similarity}} </strong>
 		</div>
 		<div class="row">
 			<div class="col-sm-4">
