--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -50,7 +50,7 @@
 	          <a class="nav-link" href="#">Candidates</a>
 	        </li>
 	        <li class="nav-item">
-	          <a class="nav-link" href="#">Jobs</a>
+	          <a class="nav-link" href="/posted_jobs">Posted Jobs</a>
 	        </li>
 					<li class="nav-item">
 	          <a class="nav-link" href="#">Salaries</a>
