--- a/app/templates/inbox/mixin/single-chat.jinja
+++ b/app/templates/inbox/mixin/single-chat.jinja
@@ -11,21 +11,81 @@
 						{% endif %}
 					</div>
 					<div class="col">
-						<small>
+                        <small>
 							{% if thread.is_anonymous %}
 								<div>{{ candidate.position }}</div>
 							{% else %}
 								<div>{{ candidate.name }}</div>
 							{% endif %}
-							<div class="text-secondary">
-								<div>
-									${{ candidate.salary_min }}, {{ candidate.experience_years }} years of experience,
-								</div>
-								<div>
-									{{ candidate.english_level }}, {{ candidate.country_code }}{% if candidate.location %}, {{ candidate.location }}{% endif %}
-								</div>
-							</div>
+
+                            {% with c_sal = candidate.salary_min,
+                                    j_sal = thread.job.salary_max,
+                                    c_exp = candidate.experience_years,
+                                    j_exp = thread.job.exp_years_int()
+                            %}
+							    <div class="text-secondary">
+								    <div>
+									    <span class="badge bg-{{
+                                             'success' if c_sal <= j_sal else 
+                                             'warning' if c_sal <= j_sal - min(0.7 * j_sal, 500) else 'danger'
+                                        }}">
+                                            ${{ candidate.salary_min }}
+                                        </span>
+
+                                        <span class="badge bg-{{
+                                             'success' if c_exp >= j_exp else
+                                             'warning' if c_exp >= j_exp - min(0.7 * j_exp, 0.5) else 'danger'
+                                        }}">
+                                            {{ candidate.experience_years }} years of experience
+                                        </span>
+								    </div>
+								    <div>
+                                        <span class="badge bg-warning">
+									        {{ candidate.english_level }}
+                                        </span>
+
+                                        <span class="badge bg-warning">
+                                            {{ candidate.country_code }}
+                                        </span>
+
+                                        {% if candidate.location %}
+                                            {% for loc in candidate.location.split(',') %}
+                                                <span class="badge bg-warning">
+                                                    {{ loc }}
+                                                </span>
+                                            {% endfor %}
+                                        {% endif %}
+								    </div>
+							    </div>
+                            {% endwith %}
 						</small>
+
+                        {% if thread.scores %}
+                            <small class="badge bg-dark">
+                                Total Score:
+                                {{ '%.2f'|format(thread.scores['total']) }}
+                            </small>
+
+                            <small class="badge bg-dark">
+                                Experience:
+                                {{ '%.2f'|format(thread.scores['experience']) }}
+                            </small>
+
+                            <small class="badge bg-dark">
+                                Skills:
+                                {{ '%.2f'|format(thread.scores['skills']) }}
+                            </small>
+
+                            <small class="badge bg-dark">
+                                English:
+                                {{ '%.2f'|format(thread.scores['english']) }}
+                            </small>
+
+                            <small class="badge bg-dark">
+                                Salary:
+                                {{ '%.2f'|format(-thread.scores['salary']) }}
+                            </small>
+                        {% endif %}
 					</div>
 				</div>
 			</div>
@@ -43,7 +103,7 @@
 				<a href="{{ url('sb:inbox_thread', thread.id) }}"><small>Open thread</small></a>
 			</div>
 			<div class="col-sm-auto">
-				<small class="text-secondary">
+                <small class="text-secondary">
 					{{ last_message.created|date('d.m.Y') }}
 				</small>
 			</div>
